--- a/Python/DATA - Projects/financial_Dashboard.ipynb
+++ b/Python/DATA - Projects/financial_Dashboard.ipynb
@@ -121,12 +121,31 @@
         "  p.vbar(df.index[gain], width, df.Open[gain], df.Close[gain], fill_color='#00FF00', line_color='#00FF00')\n",
         "  p.vbar(df.index[loss], width, df.Open[loss], df.Close[loss], fill_color='#FF0000', line_color='#FF0000')\n",
         "\n",
+        "\n",
+        "  for indicator in indicators:\n",
+        "    if indicator == '30 DAY SMA':\n",
+        "      df['SMA30'] = df['Close'].rolling(30).mean()\n",
+        "      p.line(df.index, df.SMA30, color='blue', legend_label='30 DAY SMA')\n",
+        "    elif indicator == '100 DAY SMA':\n",
+        "      df['SMA100'] = df['Close'].rolling(100).mean()\n",
+        "      p.line(df.index, df.SMA100, color='green', legend_label='100 DAY SMA')\n",
+        "    elif indicator == 'Linear Regression Line':\n",
+        "      par = np.polyfit(range(len(df.index.values)), df.Close.values, 1, full=True)\n",
+        "      slope = par[0][0]\n",
+        "      intercept = par[0][1]\n",
+        "      y_pred = [slope * i + intercept for i in range(len(df.index.values))]\n",
+        "      p.segment(df.index[0], y_pred[0], df.index[-1], color='red', legend_label='Linear Regression Line')\n",
+        "\n",
+        "\n",
+        "    p.legend.location = 'top_left'\n",
+        "    p.legend.click_policy = 'hide'\n",
+        "\n",
         "  return p"
       ],
       "metadata": {
         "id": "VBkwtw0RKlRp"
       },
-      "execution_count": 10,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -161,7 +180,7 @@
         "                        min_date='2000-01-01', max_date=dt.datetime.now().strftime('%Y-%m-%d'))\n",
         "\n",
         "\n",
-        "indicators_Choice = MultiChoice(title='Indicators', options=['100 DAY SMA', '30 DAY EMA', 'Linear Regression Line'])\n",
+        "indicators_Choice = MultiChoice(title='Indicators', options=['100 DAY SMA', '30 DAY SMA', 'Linear Regression Line'])\n",
         "\n",
         "\n",
         "load_button = Button(label='Load Data', button_type='success')\n",
@@ -171,6 +190,7 @@
         "\n",
         "\n",
         "layout = column(stock1_text, stock2_text, date_Picker_From, date_Picker_To, indicators_Choice, load_button)\n",
+        "\n",
         "curdoc().clear()\n",
         "curdoc().add_root(layout)"
       ],
